# xf86-input-mtrack

./: .gitignore  CREDITS  Makefile  Makefile.am  Makefile.in  README  README.md  RELEASE.md  aclocal.m4  config.h.in  configure  configure.ac  rebuild  required_packages.txt  run
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
debian/: README.Debian  changelog  control  copyright  rules
driver/: Makefile.am  mprops.c  mtrack.c  multitouch.c
examples/: acer-aspire-s3.conf  asus-zenbook-ux330ua-ah55  dell-precision-5520.conf  dell-xps13-9333.conf  lenovo-710s.conf  lenovo-yoga-2-pro.conf  macbook-pro-retina-2013.conf  macbook.conf
gentoo/: xf86-input-mtrack.ebuild
include/: button.h  capabilities.h  common.h  gestures.h  hwstate.h  mconfig.h  mprops.h  mtouch.h  mtstate.h  trig.h  xbypass.h
src/: .gestures.c.swp  Makefile.am  capabilities.c  gestures.c  hwstate.c  mconfig.c  mprops.c  mtouch.c  mtstate.c  test.c  trig.c
tools/: Makefile.am  mtrack-test.c  reconfigure-xinput.sh  test.c
